--- a/src/main/resources/assets/snopps_additions/lang/en_us.json
+++ b/src/main/resources/assets/snopps_additions/lang/en_us.json
@@ -4,6 +4,7 @@
   "item.snopps_additions.e_haste": "Enchanted Small Dexterity Potion",
   "item.ambatakahm_utilites.haste_mid": "Medium Dexterity Potion",
   "item.snopps_additions.e_haste_xl": "Enchanted Extra Large Dexterity Potion",
+  "item.snopps_additions.health": "Small Health Potion",
   "item.ambatakahm_utilites.haste_large": "Large Dexterity Potion",
   "item.snopps_additions.e_haste_mid": "Enchanted Mid Dexterity Potion",
   "item.snopps_additions.e_haste_large": "Enchanted Large Dexterity Potion",
