health potions and cooldown descriptions

--- a/src/main/resources/assets/snopps_additions/lang/en_us.json
+++ b/src/main/resources/assets/snopps_additions/lang/en_us.json
@@ -1,19 +1,26 @@
 {
+  "item.snopps_additions.e_health": "Enchanted Small Health Potion",
+  "item.snopps_additions.e_health_mid": "Enchanted Medium Health Potion",
+  "item.ambatakahm_utilites.haste_mid": "Medium Dexterity Potion",
+  "item.snopps_additions.health_large": "Large Health Potion",
+  "item.ambatakahm_utilites.haste_large": "Large Dexterity Potion",
+  "item.snopps_additions.haste_mid": "Medium Dexterity Potion",
+  "item.snopp_potions.haste_mid": "Medium Dexterity Potion",
+  "item.snopp_potions.haste": "Small Dexterity Potion",
+  "item.snopps_additions.e_health_large": "Enchanted Large Health Potion",
+  "item.ambatakahm_utilites.haste": "Small Dexterity Potion",
+  "item.snopps_additions.haste_xl": "Extra Large Dexterity Potion",
   "item.ambatakahm_utilites.haste_xl": "Extra Large Dexterity Potion",
+  "item.snopps_additions.health_mid": "Medium Health Potion",
   "item.snopps_additions.haste_large": "Large Dexterity Potion",
   "item.snopps_additions.e_haste": "Enchanted Small Dexterity Potion",
-  "item.ambatakahm_utilites.haste_mid": "Medium Dexterity Potion",
+  "item.snopps_additions.e_health_xl": "Enchanted Extra Large Health Potion",
   "item.snopps_additions.e_haste_xl": "Enchanted Extra Large Dexterity Potion",
   "item.snopps_additions.health": "Small Health Potion",
-  "item.ambatakahm_utilites.haste_large": "Large Dexterity Potion",
   "item.snopps_additions.e_haste_mid": "Enchanted Mid Dexterity Potion",
   "item.snopps_additions.e_haste_large": "Enchanted Large Dexterity Potion",
-  "item.snopps_additions.haste_mid": "Medium Dexterity Potion",
-  "item.snopp_potions.haste": "Small Dexterity Potion",
-  "item.snopp_potions.haste_mid": "Medium Dexterity Potion",
   "item.snopp_potions.haste_xl": "Extra Large Dexterity Potion",
   "item.snopps_additions.haste": "Small Dexterity Potion",
-  "item.ambatakahm_utilites.haste": "Small Dexterity Potion",
-  "item.snopp_potions.haste_large": "Large Dexterity Potion",
-  "item.snopps_additions.haste_xl": "Extra Large Dexterity Potion"
+  "item.snopps_additions.health_xl": "Extra Large Health Potion",
+  "item.snopp_potions.haste_large": "Large Dexterity Potion"
 }
