--- a/src/main/resources/assets/snopps_additions/lang/en_us.json
+++ b/src/main/resources/assets/snopps_additions/lang/en_us.json
@@ -1,22 +1,31 @@
 {
   "item.snopps_additions.e_health": "Enchanted Small Health Potion",
   "item.snopps_additions.e_health_mid": "Enchanted Medium Health Potion",
+  "item.snopps_additions.swiftness_large": "Large Swiftness Potion",
   "item.ambatakahm_utilites.haste_mid": "Medium Dexterity Potion",
   "item.snopps_additions.health_large": "Large Health Potion",
+  "item.snopps_additions.e_swiftness_large": "Enchanted Large Swiftness Potion",
   "item.ambatakahm_utilites.haste_large": "Large Dexterity Potion",
   "item.snopps_additions.haste_mid": "Medium Dexterity Potion",
-  "item.snopp_potions.haste_mid": "Medium Dexterity Potion",
+  "item.snopps_additions.e_swiftness_xl": "Enchanted Large Swiftness Potion",
   "item.snopp_potions.haste": "Small Dexterity Potion",
+  "item.snopp_potions.haste_mid": "Medium Dexterity Potion",
   "item.snopps_additions.e_health_large": "Enchanted Large Health Potion",
+  "item.snopps_additions.swiftness_mid": "Medium Swiftness Potion",
   "item.ambatakahm_utilites.haste": "Small Dexterity Potion",
+  "item.snopps_additions.swiftness_xl": "Extra Large Swiftness Potion",
   "item.snopps_additions.haste_xl": "Extra Large Dexterity Potion",
+  "itemGroup.tabsnoops_potions": "Snoop\u0027s Battle Potions",
+  "item.snopps_additions.e_swiftness": "Enchanted Small Swiftness Potion",
   "item.ambatakahm_utilites.haste_xl": "Extra Large Dexterity Potion",
   "item.snopps_additions.health_mid": "Medium Health Potion",
+  "item.snopps_additions.swiftness": "Small Swiftness Potion",
   "item.snopps_additions.haste_large": "Large Dexterity Potion",
   "item.snopps_additions.e_haste": "Enchanted Small Dexterity Potion",
   "item.snopps_additions.e_health_xl": "Enchanted Extra Large Health Potion",
   "item.snopps_additions.e_haste_xl": "Enchanted Extra Large Dexterity Potion",
   "item.snopps_additions.health": "Small Health Potion",
+  "item.snopps_additions.e_swiftness_mid": "Enchanted Medium Swiftness Potion",
   "item.snopps_additions.e_haste_mid": "Enchanted Mid Dexterity Potion",
   "item.snopps_additions.e_haste_large": "Enchanted Large Dexterity Potion",
   "item.snopp_potions.haste_xl": "Extra Large Dexterity Potion",
